refactor: Migrate PII reporting implementation to hexagonal architecture
- Removed tightly coupled classes: `PiiReportingProperties`, `PiiAuditRetentionJob`, and related tests.
- Introduced domain models such as `PollingConfig`, `PageSecretsResponse`, and `RevealedSecret` for better separation of concerns.
- Added appropriate in/out ports (`GetPollingConfigPort`, `RevealPiiSecretsPort`, etc.) and use cases to centralize business logic with clear boundaries.
- Implemented infrastructure adapters for configuration, PII reporting, and audit log management to conform to hexagonal architecture principles.
- Updated tests to align with the new structure and verify domain/infrastructure separation.