@@ -1,5 +1,16 @@
 package pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.in;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -10,38 +21,28 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import pro.softcom.sentinelle.application.pii.reporting.config.PiiReportingProperties;
-import pro.softcom.sentinelle.application.pii.reporting.port.out.ScanResultQuery;
-import pro.softcom.sentinelle.domain.pii.reporting.AccessPurpose;
-import pro.softcom.sentinelle.domain.pii.reporting.PiiEntity;
-import pro.softcom.sentinelle.domain.pii.reporting.ScanResult;
+import pro.softcom.sentinelle.application.pii.reporting.port.in.RevealPiiSecretsPort;
+import pro.softcom.sentinelle.domain.pii.reporting.PageSecretsResponse;
+import pro.softcom.sentinelle.domain.pii.reporting.RevealedSecret;
 import pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.in.PiiAccessController.PageRevealRequest;
-import pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.in.PiiAccessController.PageSecretsResponse;
-import pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.in.PiiAccessController.RevealedSecret;
-
-import java.util.Collections;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.SoftAssertions.assertSoftly;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.in.PiiAccessController.PageSecretsResponseDto;
+import pro.softcom.sentinelle.infrastructure.pii.reporting.adapter.in.PiiAccessController.RevealedSecretDto;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("PiiAccessController - REST controller for PII access control")
 class PiiAccessControllerTest {
 
     @Mock
-    private PiiReportingProperties reportingProperties;
+    private RevealPiiSecretsPort revealPiiSecretsPort;
 
     @Mock
-    private ScanResultQuery scanResultQuery;
+    private PageSecretsResponseMapper mapper;
 
     private PiiAccessController controller;
 
     @BeforeEach
     void setUp() {
-        controller = new PiiAccessController(reportingProperties, scanResultQuery);
+        controller = new PiiAccessController(revealPiiSecretsPort, mapper);
     }
 
     // ========== isRevealAllowed() Tests ==========
@@ -54,7 +55,7 @@ class PiiAccessControllerTest {
         @DisplayName("Should_ReturnTrue_When_RevealIsAllowedByConfiguration")
         void Should_ReturnTrue_When_RevealIsAllowedByConfiguration() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
+            when(revealPiiSecretsPort.isRevealAllowed()).thenReturn(true);
 
             // When
             ResponseEntity<@NonNull Boolean> response = controller.isRevealAllowed();
@@ -64,14 +65,14 @@ class PiiAccessControllerTest {
                 softly.assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
                 softly.assertThat(response.getBody()).isTrue();
             });
-            verify(reportingProperties).isAllowSecretReveal();
+            verify(revealPiiSecretsPort).isRevealAllowed();
         }
 
         @Test
         @DisplayName("Should_ReturnFalse_When_RevealIsNotAllowedByConfiguration")
         void Should_ReturnFalse_When_RevealIsNotAllowedByConfiguration() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(false);
+            when(revealPiiSecretsPort.isRevealAllowed()).thenReturn(false);
 
             // When
             ResponseEntity<@NonNull Boolean> response = controller.isRevealAllowed();
@@ -81,21 +82,21 @@ class PiiAccessControllerTest {
                 softly.assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
                 softly.assertThat(response.getBody()).isFalse();
             });
-            verify(reportingProperties).isAllowSecretReveal();
+            verify(revealPiiSecretsPort).isRevealAllowed();
         }
 
         @Test
-        @DisplayName("Should_CallPropertiesOnlyOnce_When_CheckingRevealAllowed")
-        void Should_CallPropertiesOnlyOnce_When_CheckingRevealAllowed() {
+        @DisplayName("Should_CallPortOnlyOnce_When_CheckingRevealAllowed")
+        void Should_CallPortOnlyOnce_When_CheckingRevealAllowed() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
+            when(revealPiiSecretsPort.isRevealAllowed()).thenReturn(true);
 
             // When
             controller.isRevealAllowed();
 
             // Then
-            verify(reportingProperties, times(1)).isAllowSecretReveal();
-            verifyNoMoreInteractions(reportingProperties);
+            verify(revealPiiSecretsPort, times(1)).isRevealAllowed();
+            verifyNoMoreInteractions(revealPiiSecretsPort);
         }
     }
 
@@ -110,121 +111,119 @@ class PiiAccessControllerTest {
         private static final String PAGE_TITLE = "Test Page";
 
         @Test
-        @DisplayName("Should_ReturnForbidden_When_RevealNotAllowedByConfiguration")
-        void Should_ReturnForbidden_When_RevealNotAllowedByConfiguration() {
+        @DisplayName("Should_ReturnForbidden_When_SecurityExceptionThrown")
+        void Should_ReturnForbidden_When_SecurityExceptionThrown() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(false);
+            when(revealPiiSecretsPort.revealPageSecrets(any(), any()))
+                    .thenThrow(new SecurityException("Not allowed"));
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
             assertThat(response.getStatusCode()).isEqualTo(HttpStatus.FORBIDDEN);
-            verify(reportingProperties).isAllowSecretReveal();
-            verifyNoInteractions(scanResultQuery);
+            verify(revealPiiSecretsPort).revealPageSecrets(SCAN_ID, PAGE_ID);
         }
 
         @Test
-        @DisplayName("Should_ReturnNotFound_When_NoResultsFound")
-        void Should_ReturnNotFound_When_NoResultsFound() {
+        @DisplayName("Should_ReturnNotFound_When_PortReturnsEmpty")
+        void Should_ReturnNotFound_When_PortReturnsEmpty() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-            when(scanResultQuery.listItemEventsDecrypted(
-                    SCAN_ID,
-                    PAGE_ID,
-                    AccessPurpose.USER_DISPLAY
-            )).thenReturn(Collections.emptyList());
+            when(revealPiiSecretsPort.revealPageSecrets(SCAN_ID, PAGE_ID))
+                    .thenReturn(Optional.empty());
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
             assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-            verify(reportingProperties).isAllowSecretReveal();
-            verify(scanResultQuery).listItemEventsDecrypted(SCAN_ID, PAGE_ID, AccessPurpose.USER_DISPLAY);
+            verify(revealPiiSecretsPort).revealPageSecrets(SCAN_ID, PAGE_ID);
         }
 
         @Test
-        @DisplayName("Should_ReturnSecrets_When_ResultsFoundWithEntities")
-        void Should_ReturnSecrets_When_ResultsFoundWithEntities() {
+        @DisplayName("Should_ReturnSecrets_When_PortReturnsResults")
+        void Should_ReturnSecrets_When_PortReturnsResults() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
+            RevealedSecret secret1 = new RevealedSecret(0, 10, "john@example.com", 
+                    "Email: john@example.com", "Email: [EMAIL]");
+            RevealedSecret secret2 = new RevealedSecret(20, 30, "1234567890", 
+                    "Phone: 1234567890", "Phone: [PHONE]");
 
-            PiiEntity entity1 = createEntity(0, 10, "john@example.com", "Email: john@example.com", "Email: [EMAIL]");
-            PiiEntity entity2 = createEntity(20, 30, "1234567890", "Phone: 1234567890", "Phone: [PHONE]");
-
-            ScanResult scanResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle(PAGE_TITLE)
-                    .detectedEntities(List.of(entity1, entity2))
-                    .build();
-
-            when(scanResultQuery.listItemEventsDecrypted(
+            PageSecretsResponse domainResponse = new PageSecretsResponse(
                     SCAN_ID,
                     PAGE_ID,
-                    AccessPurpose.USER_DISPLAY
-            )).thenReturn(List.of(scanResult));
+                    PAGE_TITLE,
+                    List.of(secret1, secret2)
+            );
+
+            RevealedSecretDto secretDto1 = new RevealedSecretDto(0, 10, "john@example.com",
+                    "Email: john@example.com", "Email: [EMAIL]");
+            RevealedSecretDto secretDto2 = new RevealedSecretDto(20, 30, "1234567890",
+                    "Phone: 1234567890", "Phone: [PHONE]");
+            PageSecretsResponseDto dto = new PageSecretsResponseDto(SCAN_ID, PAGE_ID, PAGE_TITLE,
+                    List.of(secretDto1, secretDto2));
+
+            when(revealPiiSecretsPort.revealPageSecrets(SCAN_ID, PAGE_ID))
+                    .thenReturn(Optional.of(domainResponse));
+            when(mapper.toDto(domainResponse)).thenReturn(dto);
 
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
             assertSoftly(softly -> {
                 softly.assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
                 softly.assertThat(response.getBody()).isNotNull();
 
-                PageSecretsResponse body = response.getBody();
-                softly.assertThat(body.scanId()).isNotNull();
+                PageSecretsResponseDto body = response.getBody();
                 softly.assertThat(body.scanId()).isEqualTo(SCAN_ID);
                 softly.assertThat(body.pageId()).isEqualTo(PAGE_ID);
                 softly.assertThat(body.pageTitle()).isEqualTo(PAGE_TITLE);
                 softly.assertThat(body.secrets()).hasSize(2);
 
-                RevealedSecret secret1 = body.secrets().getFirst();
-                softly.assertThat(secret1.startPosition()).isZero();
-                softly.assertThat(secret1.endPosition()).isEqualTo(10);
-                softly.assertThat(secret1.sensitiveValue()).isEqualTo("john@example.com");
-                softly.assertThat(secret1.sensitiveContext()).isEqualTo("Email: john@example.com");
-                softly.assertThat(secret1.maskedContext()).isEqualTo("Email: [EMAIL]");
+                RevealedSecretDto actualDto1 = body.secrets().getFirst();
+                softly.assertThat(actualDto1.startPosition()).isZero();
+                softly.assertThat(actualDto1.endPosition()).isEqualTo(10);
+                softly.assertThat(actualDto1.sensitiveValue()).isEqualTo("john@example.com");
+                softly.assertThat(actualDto1.sensitiveContext()).isEqualTo("Email: john@example.com");
+                softly.assertThat(actualDto1.maskedContext()).isEqualTo("Email: [EMAIL]");
 
-                RevealedSecret secret2 = body.secrets().get(1);
-                softly.assertThat(secret2.startPosition()).isEqualTo(20);
-                softly.assertThat(secret2.endPosition()).isEqualTo(30);
-                softly.assertThat(secret2.sensitiveValue()).isEqualTo("1234567890");
+                RevealedSecretDto actualDto2 = body.secrets().get(1);
+                softly.assertThat(actualDto2.startPosition()).isEqualTo(20);
+                softly.assertThat(actualDto2.endPosition()).isEqualTo(30);
+                softly.assertThat(actualDto2.sensitiveValue()).isEqualTo("1234567890");
             });
 
-            verify(reportingProperties).isAllowSecretReveal();
-            verify(scanResultQuery).listItemEventsDecrypted(SCAN_ID, PAGE_ID, AccessPurpose.USER_DISPLAY);
+            verify(revealPiiSecretsPort).revealPageSecrets(SCAN_ID, PAGE_ID);
+            verify(mapper).toDto(domainResponse);
         }
 
         @Test
-        @DisplayName("Should_ReturnEmptySecretsList_When_ResultHasNoEntities")
-        void Should_ReturnEmptySecretsList_When_ResultHasNoEntities() {
+        @DisplayName("Should_ReturnEmptySecretsList_When_ResponseHasNoSecrets")
+        void Should_ReturnEmptySecretsList_When_ResponseHasNoSecrets() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-
-            ScanResult scanResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle(PAGE_TITLE)
-                    .detectedEntities(Collections.emptyList())
-                    .build();
-
-            when(scanResultQuery.listItemEventsDecrypted(
+            PageSecretsResponse domainResponse = new PageSecretsResponse(
                     SCAN_ID,
                     PAGE_ID,
-                    AccessPurpose.USER_DISPLAY
-            )).thenReturn(List.of(scanResult));
+                    PAGE_TITLE,
+                    Collections.emptyList()
+            );
+
+            PageSecretsResponseDto dto = new PageSecretsResponseDto(SCAN_ID, PAGE_ID, PAGE_TITLE,
+                    Collections.emptyList());
+
+            when(revealPiiSecretsPort.revealPageSecrets(SCAN_ID, PAGE_ID))
+                    .thenReturn(Optional.of(domainResponse));
+            when(mapper.toDto(domainResponse)).thenReturn(dto);
 
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
             assertSoftly(softly -> {
@@ -235,52 +234,11 @@ class PiiAccessControllerTest {
         }
 
         @Test
-        @DisplayName("Should_TakeFirstResult_When_MultipleResultsReturned")
-        void Should_TakeFirstResult_When_MultipleResultsReturned() {
+        @DisplayName("Should_CallPortWithCorrectParameters_When_RevealingSecrets")
+        void Should_CallPortWithCorrectParameters_When_RevealingSecrets() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-
-            ScanResult firstResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle("First Page")
-                    .detectedEntities(List.of(createEntity(0, 5, "test", "context", "masked")))
-                    .build();
-
-            ScanResult secondResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle("Second Page")
-                    .detectedEntities(Collections.emptyList())
-                    .build();
-
-            when(scanResultQuery.listItemEventsDecrypted(
-                    SCAN_ID,
-                    PAGE_ID,
-                    AccessPurpose.USER_DISPLAY
-            )).thenReturn(List.of(firstResult, secondResult));
-
-            PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
-
-            // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
-
-            // Then
-            assertSoftly(softly -> {
-                softly.assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-                softly.assertThat(response.getBody()).isNotNull();
-                softly.assertThat(response.getBody().pageTitle()).isEqualTo("First Page");
-                softly.assertThat(response.getBody().secrets()).hasSize(1);
-            });
-        }
-
-        @Test
-        @DisplayName("Should_CallQueryWithCorrectParameters_When_RevealingSecrets")
-        void Should_CallQueryWithCorrectParameters_When_RevealingSecrets() {
-            // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-            when(scanResultQuery.listItemEventsDecrypted(any(), any(), any()))
-                    .thenReturn(Collections.emptyList());
+            when(revealPiiSecretsPort.revealPageSecrets(any(), any()))
+                    .thenReturn(Optional.empty());
 
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
@@ -288,20 +246,14 @@ class PiiAccessControllerTest {
             controller.revealPageSecrets(request);
 
             // Then
-            verify(scanResultQuery).listItemEventsDecrypted(
-                    SCAN_ID,
-                    PAGE_ID,
-                    AccessPurpose.USER_DISPLAY
-            );
+            verify(revealPiiSecretsPort).revealPageSecrets(SCAN_ID, PAGE_ID);
         }
 
         @Test
-        @DisplayName("Should_HandleSingleSecret_When_OnlyOneEntityPresent")
-        void Should_HandleSingleSecret_When_OnlyOneEntityPresent() {
+        @DisplayName("Should_HandleSingleSecret_When_OnlyOneSecretPresent")
+        void Should_HandleSingleSecret_When_OnlyOneSecretPresent() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-
-            PiiEntity entity = createEntity(
+            RevealedSecret secret = new RevealedSecret(
                     10,
                     25,
                     "secret@example.com",
@@ -309,20 +261,26 @@ class PiiAccessControllerTest {
                     "Contact: [EMAIL]"
             );
 
-            ScanResult scanResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle(PAGE_TITLE)
-                    .detectedEntities(List.of(entity))
-                    .build();
+            PageSecretsResponse domainResponse = new PageSecretsResponse(
+                    SCAN_ID,
+                    PAGE_ID,
+                    PAGE_TITLE,
+                    List.of(secret)
+            );
 
-            when(scanResultQuery.listItemEventsDecrypted(any(), any(), any()))
-                    .thenReturn(List.of(scanResult));
+            RevealedSecretDto secretDto = new RevealedSecretDto(10, 25, "secret@example.com",
+                    "Contact: secret@example.com", "Contact: [EMAIL]");
+            PageSecretsResponseDto dto = new PageSecretsResponseDto(SCAN_ID, PAGE_ID, PAGE_TITLE,
+                    List.of(secretDto));
+
+            when(revealPiiSecretsPort.revealPageSecrets(any(), any()))
+                    .thenReturn(Optional.of(domainResponse));
+            when(mapper.toDto(any())).thenReturn(dto);
 
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
             assertSoftly(softly -> {
@@ -330,40 +288,47 @@ class PiiAccessControllerTest {
                 softly.assertThat(response.getBody()).isNotNull();
                 softly.assertThat(response.getBody().secrets()).hasSize(1);
 
-                RevealedSecret secret = response.getBody().secrets().getFirst();
-                softly.assertThat(secret.startPosition()).isEqualTo(10);
-                softly.assertThat(secret.endPosition()).isEqualTo(25);
-                softly.assertThat(secret.sensitiveValue()).isEqualTo("secret@example.com");
+                RevealedSecretDto actualDto = response.getBody().secrets().getFirst();
+                softly.assertThat(actualDto.startPosition()).isEqualTo(10);
+                softly.assertThat(actualDto.endPosition()).isEqualTo(25);
+                softly.assertThat(actualDto.sensitiveValue()).isEqualTo("secret@example.com");
             });
         }
 
         @Test
-        @DisplayName("Should_HandleMultipleSecrets_When_ManyEntitiesPresent")
-        void Should_HandleMultipleSecrets_When_ManyEntitiesPresent() {
+        @DisplayName("Should_HandleMultipleSecrets_When_ManySecretsPresent")
+        void Should_HandleMultipleSecrets_When_ManySecretsPresent() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-
-            List<PiiEntity> entities = List.of(
-                    createEntity(0, 10, "entity1", "ctx1", "mask1"),
-                    createEntity(10, 20, "entity2", "ctx2", "mask2"),
-                    createEntity(20, 30, "entity3", "ctx3", "mask3"),
-                    createEntity(30, 40, "entity4", "ctx4", "mask4")
+            List<RevealedSecret> secrets = List.of(
+                    new RevealedSecret(0, 10, "entity1", "ctx1", "mask1"),
+                    new RevealedSecret(10, 20, "entity2", "ctx2", "mask2"),
+                    new RevealedSecret(20, 30, "entity3", "ctx3", "mask3"),
+                    new RevealedSecret(30, 40, "entity4", "ctx4", "mask4")
             );
 
-            ScanResult scanResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle(PAGE_TITLE)
-                    .detectedEntities(entities)
-                    .build();
+            PageSecretsResponse domainResponse = new PageSecretsResponse(
+                    SCAN_ID,
+                    PAGE_ID,
+                    PAGE_TITLE,
+                    secrets
+            );
 
-            when(scanResultQuery.listItemEventsDecrypted(any(), any(), any()))
-                    .thenReturn(List.of(scanResult));
+            List<RevealedSecretDto> secretDtos = List.of(
+                    new RevealedSecretDto(0, 10, "entity1", "ctx1", "mask1"),
+                    new RevealedSecretDto(10, 20, "entity2", "ctx2", "mask2"),
+                    new RevealedSecretDto(20, 30, "entity3", "ctx3", "mask3"),
+                    new RevealedSecretDto(30, 40, "entity4", "ctx4", "mask4")
+            );
+            PageSecretsResponseDto dto = new PageSecretsResponseDto(SCAN_ID, PAGE_ID, PAGE_TITLE, secretDtos);
+
+            when(revealPiiSecretsPort.revealPageSecrets(any(), any()))
+                    .thenReturn(Optional.of(domainResponse));
+            when(mapper.toDto(any())).thenReturn(dto);
 
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
             assertSoftly(softly -> {
@@ -374,60 +339,45 @@ class PiiAccessControllerTest {
         }
 
         @Test
-        @DisplayName("Should_PreserveEntityOrder_When_MappingToSecrets")
-        void Should_PreserveEntityOrder_When_MappingToSecrets() {
+        @DisplayName("Should_PreserveSecretOrder_When_MappingToDtos")
+        void Should_PreserveSecretOrder_When_MappingToDtos() {
             // Given
-            when(reportingProperties.isAllowSecretReveal()).thenReturn(true);
-
-            List<PiiEntity> entities = List.of(
-                    createEntity(0, 5, "first", "ctx1", "mask1"),
-                    createEntity(10, 15, "second", "ctx2", "mask2"),
-                    createEntity(20, 25, "third", "ctx3", "mask3")
+            List<RevealedSecret> secrets = List.of(
+                    new RevealedSecret(0, 5, "first", "ctx1", "mask1"),
+                    new RevealedSecret(10, 15, "second", "ctx2", "mask2"),
+                    new RevealedSecret(20, 25, "third", "ctx3", "mask3")
             );
 
-            ScanResult scanResult = ScanResult.builder()
-                    .scanId(SCAN_ID)
-                    .pageId(PAGE_ID)
-                    .pageTitle(PAGE_TITLE)
-                    .detectedEntities(entities)
-                    .build();
+            PageSecretsResponse domainResponse = new PageSecretsResponse(
+                    SCAN_ID,
+                    PAGE_ID,
+                    PAGE_TITLE,
+                    secrets
+            );
 
-            when(scanResultQuery.listItemEventsDecrypted(any(), any(), any()))
-                    .thenReturn(List.of(scanResult));
+            List<RevealedSecretDto> secretDtos = List.of(
+                    new RevealedSecretDto(0, 5, "first", "ctx1", "mask1"),
+                    new RevealedSecretDto(10, 15, "second", "ctx2", "mask2"),
+                    new RevealedSecretDto(20, 25, "third", "ctx3", "mask3")
+            );
+            PageSecretsResponseDto dto = new PageSecretsResponseDto(SCAN_ID, PAGE_ID, PAGE_TITLE, secretDtos);
+
+            when(revealPiiSecretsPort.revealPageSecrets(any(), any()))
+                    .thenReturn(Optional.of(domainResponse));
+            when(mapper.toDto(any())).thenReturn(dto);
 
             PageRevealRequest request = new PageRevealRequest(SCAN_ID, PAGE_ID);
 
             // When
-            ResponseEntity<@NonNull PageSecretsResponse> response = controller.revealPageSecrets(request);
+            ResponseEntity<PageSecretsResponseDto> response = controller.revealPageSecrets(request);
 
             // Then
-            List<RevealedSecret> secrets = response.getBody().secrets();
+            List<RevealedSecretDto> actualDtos = response.getBody().secrets();
             assertSoftly(softly -> {
-                softly.assertThat(secrets.get(0).sensitiveValue()).isEqualTo("first");
-                softly.assertThat(secrets.get(1).sensitiveValue()).isEqualTo("second");
-                softly.assertThat(secrets.get(2).sensitiveValue()).isEqualTo("third");
+                softly.assertThat(actualDtos.get(0).sensitiveValue()).isEqualTo("first");
+                softly.assertThat(actualDtos.get(1).sensitiveValue()).isEqualTo("second");
+                softly.assertThat(actualDtos.get(2).sensitiveValue()).isEqualTo("third");
             });
         }
-    }
-
-    // ========== Helper Methods ==========
-
-    private PiiEntity createEntity(
-            int startPos,
-            int endPos,
-            String sensitiveValue,
-            String sensitiveContext,
-            String maskedContext
-    ) {
-        return PiiEntity.builder()
-                .startPosition(startPos)
-                .endPosition(endPos)
-                .piiType("EMAIL")
-                .piiTypeLabel("Email Address")
-                .confidence(0.95)
-                .sensitiveValue(sensitiveValue)
-                .sensitiveContext(sensitiveContext)
-                .maskedContext(maskedContext)
-                .build();
     }
 }
